15Aug01=======================================================================
1. fix problem with talks not coming out anymore
13Aug01=======================================================================
1. fixed problem of dxspots not being echoed back to spotter (announces too)
02Aug01=======================================================================
1. correct manual and help references on accept/route and reject/route. Thanks
to ea1dav for pointing out the errors
2. make sure that the actual line is printed in grepdbg & watchdbg esp. with
ALL the '^' and leading space characters as they really are
30Jul01=======================================================================
1. changes to manuals to add links etc. (g0vgs)
23Jul01=======================================================================
1. made ann,dx spots,wwv,wcy,wx more 'object oriented'.
2. allow for 'enhanced clients' and tell them what sort of thing is being 
sent.
3. Allow debug info to be sent via interface to an enhanced client.
21Jul01=======================================================================
1. started a gtkconsole program. It appears to sort of work. Requires Gtk-
Perl-0.7007.
2. start doing some spot statistical stuff. 
19Jul01=======================================================================
1. changes to Admin Manual to reflect route filtering.  Some alterations to
the help files (g0vgs)
09Jul01=======================================================================
1. fix cron so that it allows stuff to be executed on the hour (ie min=0)
06Jul01=======================================================================
1. fix talk and routing problems to mycall
2. add unset/privilege command to relinquish any sysop privileges you might 
have for the current session.
05Jul01=======================================================================
1. disconnect channels whose route node has disappeared