@@ -1,3 +1,6 @@
+16Aug01=======================================================================
+1. send a forward/opernam for a logged in user once a month (when they next
+login).
 15Aug01=======================================================================
 1. fix problem with talks not coming out anymore
 13Aug01=======================================================================
